# pdf-tools-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  smithery.yaml  startServer.sh
.github/workflows/: bump.yaml
src/: config.py  config_manager.py  main.py
src/local/: display.py  fuse.py  merge.py  metadata.py  snippet.py  text.py
src/remote/: display.py  download.py
