[project]
name = "pdf-tools-mcp"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "mcp",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git" }
